--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
 </head>
@@ -20,7 +21,21 @@
 
                 <p>Seja Bem-vindo(a), Faça login para acessar sua conta e poder fazer as configurações no seu ambiente</p>
 
-                <form action="login.php" method="post">
+                <form action="login.php" method="post" autocapitalize="on">
+                    <div class="campo">
+                        <i class="material-symbols-outlined">person</i>
+                        <input type="email" name="login" id="ilogin" placeholder="Seu email" autocomplete="emial" required maxlength="30">
+                        <label for="ilogin">Login</label>
+                    </div>
+
+                    <div>
+                        <i class="material-symbols-outlined">key</i>
+                        <input type="password" name="sen" id="isen" placeholder="Sua senha" autocapitalize="current-password" required minlength="8">
+                        <label for="isen">Senha</label>
+                    </div>
+
+                    <input type="submit" value="Entrar">
+                    <a href="esqueci.html">Esqueci a Senha <i class="material-symbols-outlined">mail</i></a>
 
                 </form>
 
