--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
                     <div class="campo">
                         <i class="material-symbols-outlined">person</i>
                         <input type="email" name="login" id="ilogin" placeholder="Seu email" autocomplete="emial" required maxlength="30">
-                        <label for="ilogin">Login</label>
+                        
                     </div>
 
-                    <div>
+                    <div class="campo">
                         <i class="material-symbols-outlined">key</i>
                         <input type="password" name="sen" id="isen" placeholder="Sua senha" autocapitalize="current-password" required minlength="8">
-                        <label for="isen">Senha</label>
+                        
                     </div>
 
                     <input type="submit" value="Entrar">
-                    <a href="esqueci.html">Esqueci a Senha <i class="material-symbols-outlined">mail</i></a>
+                    <a class="botao" href="esqueci.html">Esqueci a Senha <i class="material-symbols-outlined">mail</i></a>
 
                 </form>
 
